--- a/机器学习/逻辑回归与最大熵模型.md
+++ b/机器学习/逻辑回归与最大熵模型.md
@@ -3,7 +3,7 @@
 假设离散性随机变量Y的取值是(1,2,...,K),输入变量$$\mathbf{X} \in R^n$$  
 则，模型如下：  
 &emsp;&emsp;$$ P(Y=k|x) = \frac{exp(\mathbf{w_k}\mathbf{x})}{1+\displaystyle \sum_{k=1}^{K-1}exp(\mathbf{w_k}\mathbf{x})}, k=1,2,...,K-1$$  
-&emsp;&emsp;$$P(Y=K|x) = \frac{1}{1+\displaystyle \sum_{k=1}^{K-1}exp(\mathbf{w_k}\mathbf{x})}$$   
+&emsp;&emsp;$$P(Y=0|x) = \frac{1}{1+\displaystyle \sum_{k=1}^{K-1}exp(\mathbf{w_k}\mathbf{x})}$$   
 这里$$\mathbf{x} \in \mathbf{R^{n+1}};\mathbf{w_k} \in \mathbf{R^{n+1}}$$.  
 因此，总的似然函数可以表示为：  
 &emsp;&emsp;$$L(\mathbf{W}) = \displaystyle \prod _{n=1}^NP(Y=Y_n|X=X_n)$$ 
