--- a/机器学习/逻辑回归与最大熵模型.md
+++ b/机器学习/逻辑回归与最大熵模型.md
@@ -23,12 +23,14 @@
 一般连乘形式的似然函数容易发生值溢出，故而一般求对数似然函数：  
 &emsp;&emsp;$$L(\mathbf{W}) = \displaystyle \sum _{n=1}^N[y_i\log\pi(x_i) + (1-y_i)\log[1-\pi(x_i)]$$  
 &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;$$= \displaystyle \sum _{n=1}^N[y_i(w*x_i) - \log(1+exp(w*x_i))$$   
+
+求$$L(\mathbf{W})$$的极大值，得到$$\mathbf{w}$$的估计值。  
+问题转化为以对数似然函数为目标函数的最优化问题，一般采用梯度下降法或者拟牛顿法求解。(为啥不使用牛顿法？因为求Hassian矩阵比较麻烦，而拟牛顿法只需要构造Hassian阵就可以了，用迭代法求)  
+####梯度下降法求解  
 因此：  
 &emsp;&emsp;$$\frac{\partial L(\mathbf{w})}{\partial \mathbf{w}} = \displaystyle \sum _{n=1}^N[y_i*x_i - x_i\pi_i] = \displaystyle \sum _{n=1}^Nx_i[y_i - \pi_i]$$  
 所以：    
 &emsp;&emsp;$$w := w - \alpha \displaystyle \sum _{n=1}^Nx_i[y_i - \pi_i]$$
-求$$L(\mathbf{W})$$的极大值，得到$$\mathbf{w}$$的估计值。  
-问题转化为以对数似然函数为目标函数的最优化问题，一般采用梯度下降法或者拟牛顿法求解。(为啥不使用牛顿法？因为求Hassian矩阵比较麻烦，而拟牛顿法只需要构造Hassian阵就可以了，用迭代法求)  
 
 #最大熵模型
 ##最大熵原理
