--- a/C++/线程.md
+++ b/C++/线程.md
@@ -12,6 +12,8 @@
 阻塞和非阻塞关注的是程序在等待调用结果 （消息，返回值）时的状态：  
 阻塞调用是在调用结果返回之前，当前线程会被挂起。调用线程只有在得到结果之后才返回。非阻塞调用指在不能立即得到结果之前，该调用不会阻塞档当前线程。  
 还是上面的例子，你打电话问书店老板有没有《分布式系统》这本书，你如果是阻塞式调用，你会一直把自己“挂起”，直到得到这本书有没有的结果，如果是非阻塞式调用，你不管老板有没有告诉你，你自己先一边去玩了， 当然你也要偶尔过几分钟check一下老板有没有返回结果。在这里阻塞与非阻塞与是否同步异步无关。跟老板通过什么方式回答你结果无关。  
+(5) 在Windwos中，进程同步主要有以下几种：互斥量、信号量、事件、可等计时器等几种技术。   
+在Windows下，进程通信主要有以下几种：内存映射、管道、消息等，但是内存映射是最基础的，因为，其他的进程通信手段在内部都是考内存映射来完成的。
 ##概念    
 本节要讨论的概念
 
