--- a/C++/线程.md
+++ b/C++/线程.md
@@ -1,4 +1,9 @@
 # 线程与进程
+问题：  
+1. 为什么需要进程的同步或互斥？为什么需要进程间通信？  
+进程互斥，同步的概念是并发进程下存在的概念，有了并发进程，就产生了资源的竞争与协作，从而就要通过进程的互斥，同步，通信来解决资源的竞争与协作问题[^1]。  
+进程的互斥，同步，通信都市基于这两种基本关系而存在的，为了解决进程间竞争关系(间接制约关系)而引入进程互斥；为了解决进程间松散的协作关系(直接制约关系)而引入进程同步；为了解决进程间紧密的协作关系而引入进程通信。  
+
 ##总结
 (1)进程是系统分配资源的最小单位，线程是处理器调度的最小单位。    
 (2)进程是下面可以有多个线程，是线程的容器。进程下的线程共享一些资源，比如所有exe与dll模块的代码与数据。     
@@ -12,7 +17,7 @@
 阻塞和非阻塞关注的是程序在等待调用结果 （消息，返回值）时的状态：  
 阻塞调用是在调用结果返回之前，当前线程会被挂起。调用线程只有在得到结果之后才返回。非阻塞调用指在不能立即得到结果之前，该调用不会阻塞档当前线程。  
 还是上面的例子，你打电话问书店老板有没有《分布式系统》这本书，你如果是阻塞式调用，你会一直把自己“挂起”，直到得到这本书有没有的结果，如果是非阻塞式调用，你不管老板有没有告诉你，你自己先一边去玩了， 当然你也要偶尔过几分钟check一下老板有没有返回结果。在这里阻塞与非阻塞与是否同步异步无关。跟老板通过什么方式回答你结果无关。  
-(5) 在Windwos中，进程同步主要有以下几种：互斥量、信号量、事件、可等计时器等几种技术。   
+(5) 在Windwos中，进程同步主要有以下几种：临界区（Critical Section）、互斥量（Mutex）、信号量（Semaphore）、事件（Event）。   
 在Windows下，进程通信主要有以下几种：内存映射、管道、消息等，但是内存映射是最基础的，因为，其他的进程通信手段在内部都是考内存映射来完成的。
 ##概念    
 本节要讨论的概念
@@ -121,5 +126,7 @@ win32中四种主要的同步机制：
 
 进程内核对象在创建的时候总是处于未触发，当进程终止的时候，操作系统会自动使进程内核对象变成出发状态。  
 触发的意思就是，外面的线程现在可以使用这些内核对象了。也就是等待该内核对象触发的线程变成可调度了。  
-触发有什么比较形象的比喻吗？
+触发有什么比较形象的比喻吗？  
+
+[^1]: 进程的同步与通信，进程与线程同步的区别，进程与线程通信的区别  https://www.cnblogs.com/youngforever/p/3250270.html
 
