--- a/C++/线程.md
+++ b/C++/线程.md
@@ -3,6 +3,7 @@
 1. 为什么需要进程的同步或互斥？为什么需要进程间通信？  
 进程互斥，同步的概念是并发进程下存在的概念，有了并发进程，就产生了资源的竞争与协作，从而就要通过进程的互斥，同步，通信来解决资源的竞争与协作问题[^1]。  
 进程的互斥，同步，通信都市基于这两种基本关系而存在的，为了解决进程间竞争关系(间接制约关系)而引入进程互斥；为了解决进程间松散的协作关系(直接制约关系)而引入进程同步；为了解决进程间紧密的协作关系而引入进程通信。  
+  
 
 ##总结
 (1)进程是系统分配资源的最小单位，线程是处理器调度的最小单位。    
@@ -18,7 +19,7 @@
 阻塞调用是在调用结果返回之前，当前线程会被挂起。调用线程只有在得到结果之后才返回。非阻塞调用指在不能立即得到结果之前，该调用不会阻塞档当前线程。  
 还是上面的例子，你打电话问书店老板有没有《分布式系统》这本书，你如果是阻塞式调用，你会一直把自己“挂起”，直到得到这本书有没有的结果，如果是非阻塞式调用，你不管老板有没有告诉你，你自己先一边去玩了， 当然你也要偶尔过几分钟check一下老板有没有返回结果。在这里阻塞与非阻塞与是否同步异步无关。跟老板通过什么方式回答你结果无关。  
 (5) 在Windwos中，进程同步主要有以下几种：临界区（Critical Section）、互斥量（Mutex）、信号量（Semaphore）、事件（Event）。   
-在Windows下，进程通信主要有以下几种：内存映射、管道、消息等，但是内存映射是最基础的，因为，其他的进程通信手段在内部都是考内存映射来完成的。
+在Windows下，进程通信主要有以下几种：内存映射、管道、消息等，但是内存映射是最基础的，因为，其他的进程通信手段在内部都是靠内存映射来完成的。
 ##概念    
 本节要讨论的概念
 
