--- a/C++/线程.md
+++ b/C++/线程.md
@@ -36,7 +36,7 @@
 　　（2）若此信号量的值为正，则允许进行使用该资源，进程将进号量减1；   
 　　（3）若此信号量为0，则该资源目前不可用，进程进入睡眠状态，直至信号量值大于0，进程被唤醒，转入步骤(1)；     
 　　（4）当进程不再使用一个信号量控制的资源时，信号量值加1，如果此时有进程正在睡眠等待此信号量，则唤醒此进程。   
-    套接字通信并不为Linux所专有，在所有提供了TCP/IP协议栈的操作系统中几乎都提供了socket，而所有这样操作系统，对套接字的编程方法几乎是完全一样的.     
+    套接字通信并不为Linux所专有，在所有提供了TCP/IP协议栈的操作系统中几乎都提供了socket，而所有这样操作系统，对套接字的编程方法几乎是完全一样的.[^2]     
 Linux 下常见的进程通信的方法有 ：pipe（管道），FIFO（命名管道），socket（套接字），SysVIPC 的 shm（共享内存）、msg queue（消息队列），mmap（文件映射）。     
 Windows下，进程通信主要有以下几种：内存映射、管道、消息等，但是内存映射是最基础的，因为，其他的进程通信手段在内部都是考内存映射来完成的。    
 
@@ -164,5 +164,7 @@ win32中四种主要的同步机制：
 触发的意思就是，外面的线程现在可以使用这些内核对象了。也就是等待该内核对象触发的线程变成可调度了。  
 触发有什么比较形象的比喻吗？  
 
-[^1]: 进程的同步与通信，进程与线程同步的区别，进程与线程通信的区别  https://www.cnblogs.com/youngforever/p/3250270.html
+[^1]: 进程的同步与通信，进程与线程同步的区别，进程与线程通信的区别  https://www.cnblogs.com/youngforever/p/3250270.html  
+[^2]:  进程/线程同步的方式和机制，进程间通信  https://www.cnblogs.com/memewry/archive/2012/08/22/2651696.html   
+
 
