--- a/C++/线程.md
+++ b/C++/线程.md
@@ -66,7 +66,37 @@ PV操作及信号量的概念都是由荷兰科学家E.W.Dijkstra提出的。信
 很明显2者有类似，但是差别很大  
 同步主要是临界区、互斥、信号量、事件   
 进程间通信是管道、内存共享、消息队列、信号量、socket  
-共通之处是，信号量和消息（事件）   
+共通之处是，信号量和消息（事件）    
+
+###linux线程同步和进程同步的区别[^3]
+线程同步：多线程编程中，解决共享资源冲突的问题   
+进程同步：多进程编程中，解决共享资源冲突的问题   
+
+但是部分同学对线程同步和进程同步研究得不够深入，比如互斥锁和条件变量能不能同时用于线程同步和进程同步，本质上有什么区别。   
+
+首先我们知道，linux下每个进程都有自己的独立进程空间，假设A进程和B进程各有一个互斥锁，这个锁放在进程的全局静态区，那么AB进程都是无法感知对方的互斥锁的。   
+
+互斥锁和条件变量出自Posix.1线程标准，它们总是可以用来同步一个进程内的各个线程的。如果一个互斥锁或者条件变量存放在多个进程共享的某个内存区中，那么Posix还允许它用在这些进程间的同步。   
+
+看到这里，是不是发现点了什么，线程同步和进程同步的本质区别在于锁放在哪，放在私有的进程空间还是放在多进程共享的空间，并且看锁是否具备进程共享的属性，   
+下面列举了常用的同步机制，使用时需要注意线程同步和进程同步初始化的参数的不同。   
+
+线程同步：  
+1.互斥锁  
+2.读写锁   
+3.条件变量   
+4.信号量   
+5.自旋锁   
+6.屏障（barrier）   
+ 
+进程同步：   
+1.互斥锁   
+2.读写锁   
+3.条件变量   
+4.记录锁(record locking)   
+5.信号量    
+6.屏障（barrier）  
+
 ##总结
 (1)进程是系统分配资源的最小单位，线程是处理器调度的最小单位。    
 (2)进程是下面可以有多个线程，是线程的容器。进程下的线程共享一些资源，比如所有exe与dll模块的代码与数据。     
@@ -193,5 +223,5 @@ win32中四种主要的同步机制：
 
 [^1]: 进程的同步与通信，进程与线程同步的区别，进程与线程通信的区别  https://www.cnblogs.com/youngforever/p/3250270.html  
 [^2]:  进程/线程同步的方式和机制，进程间通信  https://www.cnblogs.com/memewry/archive/2012/08/22/2651696.html   
-
+[^3]:  linux线程同步和进程同步的区别  https://blog.csdn.net/daiyudong2020/article/details/51707823  
 
